[package]
name = "brainlet_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brainlet_test"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# Pin transitive crates that demand edition2024 (cargo >=1.85), which the SBF
# platform-tools cargo can't do. 1.7.0 pulls zeroize_derive 1.4.x (no edition2024).
zeroize = "=1.7.0"
